# dawn

documents/: .~lock.dawn spec.doc#  dawn spec.doc  transmit flow.odg
src/core/: CMakeLists.txt  dawn.c  dawn.cmake  dawn.h  platform.h
src/example/master/: CMakeLists.txt  master.c
src/example/share/: link.h
src/example/slave/: CMakeLists.txt  slave.c
src/examples/master/: CMakeLists.txt  master.c
src/examples/share/: CMakeLists.txt  liink.c
src/examples/slave/: CMakeLists.txt  slave.c
